SPARK-1330, filetransfer now displays current speed and estimated time of arrivel
new strings:
message.transfer.complete = The file transfer was complete ({0}))
// 0 = filename
message.transfer.progressbar.text.received = {0} received   @ {1}    {2}
// 0 = amount received
// 1 = current speed
// 2 = estimated time of arrival (eta)
message.transfer.progressbar.text.sent = {0} sent   @ {1}    {2}
// 0 = amount sent
// 1 = current speed
// 2 = eta

>>note that there are more than 1 whitespaces between some letters<<

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12424 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -777,6 +777,9 @@ message.supply.valid.timeout = Supply a valid time out value
 message.timeout.error = The timeout must be 5 seconds or greater
 message.total.downloaded = Total downloaded
 message.transfer.cancelled = The file transfer was canceled
+message.transfer.complete = The file transfer was complete ({0}))
+message.transfer.progressbar.text.received = {0} received   @ {1}    {2}
+message.transfer.progressbar.text.sent = {0} sent   @ {1}    {2}
 message.transfer.rate = Transfer rate
 message.transfer.refused = The file transfer was refused
 message.transfer.waiting.on.user = Waiting for {0} to accept file transfer
