--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -463,11 +463,14 @@ message.file.transfer.canceled = Sie haben den Dateitransfer abgebrochen.
 message.negotiate.file.transfer = Dateitransfer wird vorbereitet. Bitte warten...
 message.negotiate.stream = Verbindungsdaten werden vorbereitet. Bitte warten...
 message.receiving.file = Sie haben eine Datei von {0} erhalten
+message.received.file = Sie haben eine Datei von {0} erhalten.
 message.click.to.open = Öffnen
 message.error.during.file.transfer = Während des Dateitransfers ist ein Fehler aufgetreten.
 message.transfer.refused = Der Dateitransfer wurde verweigert.
 message.transfer.cancelled = Der Dateitransfer wurde abgebrochen.
-message.received.file = Sie haben eine Datei von {0} erhalten.
+message.transfer.complete = Der Dateitransfer war erfolgreich ({0}))
+message.transfer.progressbar.text.received = {0} empfangen   @ {1}    {2}
+message.transfer.progressbar.text.sent = {0} gesendet   @ {1}    {2}
 message.file.exists.question = Die Datei existiert bereits. Überschreiben?
 message.transfer.waiting.on.user = {0} muss den Dateitransfer akzeptieren. Bitte warten...
 message.negotiation.file.transfer = Dateitransfer mit {0} wird initialisiert. Bitte warten...
