SPARK-1254 if you want to change the spellchecker's language in the chat window you can enable a drop down menu in the spellchecker preferences
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12425 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/spelling/src/resources/i18n/spellchecker_i18n.properties
+++ b/src/plugins/spelling/src/resources/i18n/spellchecker_i18n.properties
@@ -4,4 +4,6 @@ preference.spellcheckingEnabled = Enable &Spellchecking
 preference.autoSpellcheckingEnabled = Enable &Auto Spellchecking
 preference.language = &Language
 preference.ignore.uppercasedword = &Ignore upper and lowercase
+preference.show.langauage.in.chat.windows = Allow language selection in chat window
+dialog.no.mistakes = No spelling mistakes 
 button.check.spelling = Check spelling
