--- a/src/plugins/spelling/src/resources/i18n/spellchecker_i18n_de.properties
+++ b/src/plugins/spelling/src/resources/i18n/spellchecker_i18n_de.properties
@@ -5,3 +5,5 @@ preference.autoSpellcheckingEnabled = &Automatische Rechtschreibprüfung aktivier
 preference.language = &Sprache
 preference.ignore.uppercasedword = &Groß- und Kleinschreibung ignorieren
 button.check.spelling = Rechtschreibung überprüfen
+preference.show.langauage.in.chat.windows = Erlaube Auswahl der Sprache im Chatfenster
+dialog.no.mistakes = Keine Rechtschreibfehler
