SPARK-1333 updated lithuanian fixed appleplugin logos fixed typo in received file string eng and de
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12428 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -281,7 +281,7 @@ button.send.email = Pa\u0161tas
 button.start.chat = Pokalbis
 button.tasks.active = Aktualios
 button.tasks.all = Visos
-button.unset.file.explorer = Nustatyti fail\u0173 per\u017ei\u016br\u0105 i\u0161 naujo
+button.unset.file.explorer = Nustatyti byl\u0173 per\u017ei\u016br\u0105 i\u0161 naujo
 button.update = &Atnaujinti
 button.view.notes = Per\u017ei\u016br\u0117ti u\u017era\u0161us
 button.view.profile = Per\u017ei\u016br\u0117ti profil\u012f
@@ -324,7 +324,7 @@ checkbox.use.proxy.server = Naudoti tarpin\u012f server\u012f
 checkbox.use.system.look.and.feel = Naudoti operacin\u0117s sistemos i\u0161vaizd\u0105 (reik\u0117s i\u0161 naujo paleisti program\u0105)
 checkbox.window.to.front = &I\u0161kelti prane\u0161imo lang\u0105 \u012f ekrano priek\u012f
 checkbox.broadcast.hide.offline.user = Sl\u0117pti atsijungusius
-checkbox.use.krbconf = Naudoti krb5.conf ir krb5.ini failus
+checkbox.use.krbconf = Naudoti krb5.conf ir krb5.ini bylas
 checkbox.use.krb.dns = Naudoti sri\u010di\u0173 vard\u0173 server\u012f (DNS)
 checkbox.use.specify.below = Apib\u016bdinimas \u017eemiau
 checkbox.use.pki.authentication = &PKI autentifikavimo naudojimas
@@ -446,14 +446,14 @@ label.xmpp.port = &XMPP prievadas
 label.krb.realm = Realm
 label.krb.kdc = KDC
 label.which.pki.method = Kuris PKI metodas?
-label.choose.file = Pasirinkti fail\u0105
+label.choose.file = Pasirinkti byl\u0105
 label.trust.store.password = Patikim\u0173 sertifikat\u0173 saugyklos slapta\u017eodis
 label.enter.password = \u012evesti slapta\u017eod\u012f
 label.move.focus.forwards = Fokusas pirmyn
 label.move.focus.backwards = Fokusas atgal
 label.keystore.location = Rakt\u0173 saugyklos vieta
 label.truststore.location = Patikim\u0173 sertifikat\u0173 saugyklos vieta
-label.pkcs.library.file = PKCS#11 bibliotekos failas
+label.pkcs.library.file = PKCS#11 bibliotekos byla
 label.x509.certificate = X.509 sertifikatas
 label.apple.keychain = Apple KeyChain
 label.add.to.roster = Prid\u0117ti abonent\u0105 \u012f adresat\u0173 s\u0105ra\u0161\u0105
@@ -534,7 +534,7 @@ menuitem.revoke.admin = At\u0161aukti administratori\u0173
 menuitem.revoke.owner = At\u0161aukti savininko privilegij\u0105
 menuitem.save = \u012era\u0161yti
 menuitem.save.as = \u012era\u0161yti vardu\u2026
-menuitem.send.a.file = Si\u0173sti fail\u0105
+menuitem.send.a.file = Si\u0173sti byl\u0105
 menuitem.send.a.message = Transliuoti pasirinktiems abonentams\u2026
 menuitem.set.status.message = Parinkti b\u016bsen\u0105\u2026
 menuitem.show.empty.groups = Rodyti tu\u0161\u010dias grupes
@@ -641,14 +641,14 @@ message.enter.simple = \u017demiau \u012fveskite \u201eSIMPLE\u201c tinklo abone
 message.enter.valid.jid = \u012eveskite teising\u0105 \u201eJabber\u201c tinklo identifikatori\u0173 (JID)
 message.enter.xmpp = \u017demiau \u012fveskite \u201eXMPP\u201c tinklo abonento vard\u0105 ir slapta\u017eod\u012f.
 message.enter.yahoo = \u012eveskite \u201eYAHOO\u201c tinklo abonento vard\u0105 ir slapta\u017eod\u012f.
-message.error.during.file.transfer = D\u0117l siuntimo klaidos failo i\u0161si\u0173sti nepavyko.
-message.file.exists.question = Failas jau egzistuoja. Ar perra\u0161yti i\u0161 naujo?
-message.file.size = Failo dydis: {0}
-message.file.transfer.canceled = At\u0161auktas failo siuntimas.
-message.file.transfer.rejected = Failo siuntimo nepatvirtino {0}.
-message.file.transfer.notification = Failo siuntimo prane\u0161imas
-message.file.transfer.short.message = Jums siun\u010diamas failas, kurio pavadinimas: 
-message.file.transfer.chat.window = Failo persiuntimo pra\u0161ymas:
+message.error.during.file.transfer = D\u0117l siuntimo klaidos bylos i\u0161si\u0173sti nepavyko.
+message.file.exists.question = Byla jau egzistuoja. Ar perra\u0161yti i\u0161 naujo?
+message.file.size = Bylos dydis: {0}
+message.file.transfer.canceled = At\u0161auktas bylos siuntimas.
+message.file.transfer.rejected = Bylos siuntimo nepatvirtino {0}.
+message.file.transfer.notification = Bylos siuntimo prane\u0161imas
+message.file.transfer.short.message = Jums siun\u010diamas byla, kurios pavadinimas: 
+message.file.transfer.chat.window = Bylos persiuntimo pra\u0161ymas:
 message.find.conference.services = Konferencij\u0173 suradimas
 message.forbidden.error = Serveris atsiunt\u0117 prane\u0161im\u0105 apie baisi\u0105 klaid\u0105. Tokios netoleruosime!
 message.gateway.username.error = Turi b\u016bti pateiktas abonento vardas
@@ -657,7 +657,7 @@ message.gateway.nickname.error = Pseudonimas turi b\u016bti pateiktas
 message.general.error = Praradote ry\u0161\u012f su serveriu. Problemos prie\u017eastis: {0}.
 message.generic.reconnect.message = Praradote ry\u0161\u012f su serveriu. Spragtelkite \u017eemiau esant\u012f mygtuk\u0105 \u201ePrisijungti i\u0161 naujo\u201c
 message.idle.for = Neaktyvu jau {0}
-message.image.too.large = Paveikslo failas per didelis. Paveiksl\u0117lis tur\u0117t\u0173 b\u016bti ne didesnis kaip 16k.
+message.image.too.large = Paveikslo byla per didel\u0117. Paveiksl\u0117lis tur\u0117t\u0173 b\u016bti ne didesnis kaip 16k.
 message.invalid.jabber.id = Netinkamas Jabber ID.
 message.invalid.jid.error = Nurodytas identifikatorius JID yra neteisingas.
 message.invalid.status = Nurodykite teising\u0105 b\u016bsen\u0105.
@@ -672,9 +672,9 @@ message.loading.please.wait = Kraunama. Pra\u0161om lukterti\u2026
 message.locked.workstation = Abonentas u\u017erakino savo kompiuter\u012f.
 message.name.of.group = Grup\u0117s vardas
 message.name.of.search.service.question = Koks paie\u0161kos tarnybos vardas?
-message.negotiate.file.transfer = Vyksta derybos d\u0117l failo persiuntimo. Lukterkime\u2026
-message.negotiate.stream = Vyksta derybos d\u0117l jung\u010di\u0173 sraut\u0173. Lukterkime\u2026
-message.negotiation.file.transfer = Derimasi d\u0117l failo persiuntimo su {0}. Lukterkime\u2026
+message.negotiate.file.transfer = Vyksta derybos d\u0117l bylos persiuntimo. Pra\u0161ome palaukti...
+message.negotiate.stream = Vyksta derybos d\u0117l jung\u010di\u0173 sraut\u0173. Pra\u0161ome palaukti...
+message.negotiation.file.transfer = Deramasi d\u0117l bylos persiuntimo su {0}. Pra\u0161ome palaukti...
 message.new.message = Nauja \u017einut\u0117 nuo {0}.
 message.new.spark.available = {0} pasiekiamas. Ar pageidausite \u012fdiegti?
 message.nickname.in.use = \u0160is pseudonimas jau naudojamas. Susigalvokite kit\u0105.
@@ -698,8 +698,8 @@ message.passwords.no.match = Nesutapo slapta\u017eod\u017eiai.
 message.please.join.in.conference = Kvie\u010diame apsilankyti ir dalyvauti naujai sukurtame pokalbi\u0173 kambaryje.
 message.plugins.not.available = Nepavyksta prisijungti prie pried\u0173 saugyklos.
 message.prompt.plugin.uninstall = Ar tikrai norite pa\u0161alinti program\u0105 {0}?
-message.received.file = Gavote fail\u0105, Siunt\u0117jas {0}.
-message.receiving.file = Gaunate fail\u0105. Siunt\u0117jas {0}
+message.received.file = Gavote bylas, Siunt\u0117jas {0}.
+message.receiving.file = Gaunate bylas. Siunt\u0117jas {0}
 message.reconnect.attempting = Bandom jungtis i\u0161 naujo\u2026
 message.reconnect.failed = Pakartotinai prisijungti nepavyko.
 message.reconnect.wait = V\u0117l jungsim\u0117s po {0} sek.
@@ -724,11 +724,11 @@ message.select.one.or.more = Pasirinkite vien\u0105 ar kelis abonentus.
 message.select.room.to.enter = Nurodykite kambar\u012f, kuriame lankysit\u0117s.
 message.select.room.to.join = Pasirinkite kambar\u012f, \u012f kurio pokalbius jungsit\u0117s.
 message.send.a.broadcast = Transliuoti \u017eini\u0105
-message.send.file.to.user = Si\u0173sti abonentui fail\u0105
+message.send.file.to.user = Si\u0173sti abonentui byl\u0105
 message.send.picture = Si\u0173sti ekrano vaizd\u0105
 message.send.to.these.people = Transliuojamo prane\u0161imo gav\u0117j\u0173 parinkimas
-message.sending.file.to = Failo siuntimas adresatams {0}.
-message.sent.offline.files = I\u0161siunt\u0117te fail\u0105(us) atsijungus.
+message.sending.file.to = Bylos siuntimas adresatams {0}.
+message.sent.offline.files = I\u0161siunt\u0117te byl\u0105(as) atsijungus.
 message.server.unavailable = Nepavyksta prisijungti prie serverio. Gal neteisingas serverio vardas arba jis dabar yra nepasiekiamas.
 message.service.already.exists = Paslauga jau yra.
 message.shared.group = Bendrinta grup\u0117
@@ -745,15 +745,18 @@ message.supply.resource = Reikia pateikti teising\u0105 resurs\u0105.
 message.supply.valid.port = Pateikti teising\u0105 prievad\u0105.
 message.supply.valid.timeout = Pateikti teising\u0105 laukimo laiko reik\u0161m\u0119.
 message.timeout.error = Laukimo laikas tur\u0117t\u0173 b\u016bti bent 5 sek. arba ilgesnis.
-message.total.downloaded = Parsi\u0173sti failai
-message.transfer.cancelled = Failo siuntimas at\u0161auktas.
+message.total.downloaded = Parsi\u0173stos bylos
+message.transfer.cancelled = Bylos siuntimas at\u0161auktas.
+message.transfer.complete = Bylos siuntimas u\u017ebaigtas ({0})
+message.transfer.progressbar.text.received = {0} gauta   @ {1}    {2}
+message.transfer.progressbar.text.sent = {0} i\u0161si\u0173sta   @ {1}    {2}
 message.transfer.rate = Siuntimo sparta
-message.transfer.refused = Failo siuntimas buvo atmestas.
-message.transfer.waiting.on.user = Laukiama kol {0} patvirtins failo siuntim\u0105.
+message.transfer.refused = Bylos siuntimas buvo atmestas.
+message.transfer.waiting.on.user = Laukiama kol {0} patvirtins bylos siuntim\u0105.
 message.unable.to.load.profile = Nepavyko rasti profilio {0} vietos.
 message.unable.to.retrieve.last.activity = Nepavyko rasti profilio {0}.
 message.unable.to.save.password = Nepavyko pasikeisti slapta\u017eod\u017eio. Galb\u016bt to neleid\u017eia administratorius.
-message.unable.to.send.file = Jums nepavyko nusi\u0173sti failo gav\u0117jui {0}.
+message.unable.to.send.file = Jums nepavyko nusi\u0173sti bylos gav\u0117jui {0}.
 message.unrecoverable.error = Neteisingas abonento vardas arba slapta\u017eodis.
 message.update.room.list = Kambari\u0173 s\u0105ra\u0161o atnaujinimas.
 message.updating.cancelled = Atnaujinimas at\u0161auktas.
@@ -763,7 +766,7 @@ message.user.granted.admin = {0} gavo administravimo privilegijas.
 message.user.granted.membership = {0} gavo eilinio nario privilegijas.
 message.user.granted.moderator = {0} gavo pri\u017ei\u016br\u0117tojo privilegijas.
 message.user.granted.owner = {0} gavo savininko privilegijas.
-message.user.is.sending.you.a.file = {0} Jums siun\u010dia fail\u0105.
+message.user.is.sending.you.a.file = {0} Jums siun\u010dia byl\u0105.
 message.user.joined.room = {0} apsilank\u0117 kambaryje.
 message.user.kicked.from.room = {0} buvo i\u0161mestas i\u0161 kambario.
 message.user.left.room = {0} i\u0161\u0117jo i\u0161 kambario.
@@ -783,7 +786,7 @@ message.waiting.for.user.to.join = Laukiama kol {0} prisijungs.
 message.went.offline = {0} atsijung\u0117 {1}
 message.you.have.been.banned = J\u016bs esate nepageidaujamas \u0161iame kambaryje. \u010cia Jums dalyvauti neleista.
 message.you.have.been.kicked = Nepykite, bet i\u0161 \u0161io kambario esate i\u0161mestas.
-message.you.have.sent = I\u0161siunt\u0117te fail\u0105 adresatui {0}.
+message.you.have.sent = I\u0161siunt\u0117te byl\u0105 adresatui {0}.
 message.your.admin.granted = Jums suteiktos administratoriaus privilegijos.
 message.your.banned = \u0160iame kambaryje jums dalyvauti u\u017edrausta.
 message.your.kicked = Jus i\u0161met\u0117 {0}.
@@ -839,6 +842,7 @@ title.address = Adresas
 title.advanced.connection.usesso = Naudoti Single Sign-On (SSO) via GSSAPI
 title.advanced.connection.sso.account = Prisijungimui prie serverio bus panaudota vartotojo paskyra "{0}"
 title.advanced.connection.sso.unable = Nepavyko prisijungti naudojant Single Sign-On. Pra\u0161ome patikrinti prisijungimo duomenis ir serverio nustatymus.
+title.advanced.connection.sso.noprincipal = Spark negali rasti tinkamos paskyros prisijungimui su Single Sign-On. Tai neleis naudotis SSO.
 title.alert = Prane\u0161imas
 title.appearance = I\u0161vaizda
 title.appearance.preferences = Adaptavimas
@@ -863,7 +867,7 @@ title.create.new.account = Naujos paskyros suk\u016brimas
 title.create.or.bookmark.room = Prisijungti prie konferencijos arba pasi\u017eym\u0117ti kambar\u012f
 title.create.or.join = Sukurti/Prisijungti
 title.create.problem = Paskyros suk\u016brimo problema
-title.delete.file = Ar tikrai norite pa\u0161alinti \u0161\u012f fail\u0105?
+title.delete.file = Ar tikrai norite pa\u0161alinti \u0161i\u0105 byl\u0105?
 title.dial.phone = Skambinti VOIP telefonu
 title.disable.transport = Prisijungimo kanalo informacijos pa\u0161alinimas
 title.download.complete = Parsiuntimas baigtas
@@ -873,15 +877,15 @@ title.edit.custom.message = Susikurt\u0173 b\u016bsen\u0173 redagavimas
 title.edit.profile = Profilio informacijos redagavimas
 title.enter.reason = Prie\u017easties \u012fvedimas
 title.error = Klaida
-title.error.couldnt.open.file = Nepavyko atverti failo! Patikrinkite ar teisingas failo tipas.
-title.error.delete.file = Nepavyko pa\u0161alinti failo!
+title.error.couldnt.open.file = Nepavyko atverti bylos! Patikrinkite ar teisingas bylos tipas.
+title.error.delete.file = Nepavyko pa\u0161alinti bylos!
 title.error.find.app = Nepavyko rasti tinkamos programos!
-title.error.rename.file = Nepavyko pakeisti failo vardo!
-title.file = Failas
+title.error.rename.file = Nepavyko pakeisti bylos vardo!
+title.file = Byla
 title.filesize = Dydis
-title.file.exists = Failas jau egzistuoja
-title.file.transfer = Fail\u0173 siuntimas
-title.file.transfer.preferences = Fail\u0173 siuntimo nuostatos
+title.file.exists = Byla jau egzistuoja
+title.file.transfer = Byl\u0173 siuntimas
+title.file.transfer.preferences = Byl\u0173 siuntimo nuostatos
 title.find.conference.service = Ie\u0161koti konferencij\u0173
 title.find.contacts = Ie\u0161koti abonent\u0173
 title.gadugadu.registration = \u201eGaduGadu\u201c paskyros kredencialai
@@ -898,7 +902,7 @@ title.sametime.registration = Sametime paskyros kredencialai
 title.facebook.registration = Facebook paskyros kredencialai
 title.myspace.registration = MySpace paskyros kredencialai
 title.incoming.call = Skambutis
-title.input.fileexplorer = \u012eveskite fail\u0173 nar\u0161ykl\u0117s vard\u0105:
+title.input.fileexplorer = \u012eveskite byl\u0173 nar\u0161ykl\u0117s vard\u0105:
 title.input.newname = Pra\u0161om \u012fvesti nauj\u0105 vard\u0105: 
 title.input.openwith = Nurodykite programos, kuri\u0105 naudosite vard\u0105:
 title.invite.to.conference = Pakviesti \u012f konferencij\u0105
@@ -908,6 +912,7 @@ title.last.activity = Paskiausi veiksmai
 title.login = Prisijungimas
 title.login.error = Prisijungimo klaida
 title.login.settings = Prisijungimo nuostatos
+title.login.no.account = Nepavyksta nustatyti
 title.lookup.profile = Ie\u0161koti profilio
 title.msn.registration = MSN paskyros kredencialai
 title.name = Vardas
@@ -935,7 +940,7 @@ title.rename.roster.group = Keisti s\u0105ra\u0161o grup\u0117s vard\u0105
 title.room.destroyed = Kambarys pa\u0161alintas
 title.room.information = Informacija apie kambar\u012f
 title.roster = Visi abonentai
-title.select.file.to.send = Failo(\u0173) siuntimui parinkimas
+title.select.file.to.send = Bylos(\u0173) siuntimui parinkimas
 title.set.status.message = Si\u0173sti b\u016bsenos \u017eini\u0105
 title.simple.registration = SIMPLE paskyros kredencialai
 title.sound.preferences = Gars\u0173 nuostatos
@@ -959,14 +964,14 @@ title.subscription.request = Prenumeratos pra\u0161ymas
 
 tooltip.place.a.call = Skambinimas asmeniui VOIP telefonu
 tooltip.appearance = Pokalbi\u0173 aplinkos i\u0161vaizdos keitimas
-tooltip.file.transfer = Fail\u0173 siuntimo nuostatos
+tooltip.file.transfer = Byl\u0173 siuntimo nuostatos
 tooltip.notifications = Prane\u0161im\u0173 apie \u017einutes nuostatos
 tooltip.place.voice.call = Skambinti asmeniui VOIP telefonu
 tooltip.send.email = Si\u0173sti el. lai\u0161k\u0105
 tooltip.start.chat = Prad\u0117ti pokalb\u012f
 tooltip.view.changelog = Per\u017ei\u016br\u0117ti pakeitim\u0173 \u017eurnal\u0105
 tooltip.view.history = Per\u017ei\u016br\u0117ti pokalbi\u0173 \u017eurnal\u0105
-tooltip.view.readme = Skaityti \u201eReadMe\u201c fail\u0105
+tooltip.view.readme = Skaityti \u201eReadMe\u201c byl\u0105
 
 tree.conference.services = Konferencijos
 tree.users.in.room = Kambaryje apsilank\u0119
