--- a/src/plugins/spelling/src/resources/i18n/spellchecker_i18n_lt.properties
+++ b/src/plugins/spelling/src/resources/i18n/spellchecker_i18n_lt.properties
@@ -4,5 +4,7 @@ preference.spellcheckingEnabled = \u012ejungti ra\u0161ybos tikrinim\u0105
 preference.autoSpellcheckingEnabled = \u012ejungti automatin\u012f ra\u0161ybos tikrinim\u0105
 preference.language = &Kalba
 preference.ignore.uppercasedword = &Neskirti did\u017ei\u0173j\u0173 ir ma\u017e\u0173j\u0173 raid\u017ei\u0173
+preference.show.langauage.in.chat.windows = Leisti pasirinkti kalb\u0105 pokalbio lange
+dialog.no.mistakes = Nerasta ra\u0161ybos klaid\u0173
 button.check.spelling = Patikrint ra\u0161b\u0105
 
