--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -777,7 +777,7 @@ message.supply.valid.timeout = Supply a valid time out value
 message.timeout.error = The timeout must be 5 seconds or greater
 message.total.downloaded = Total downloaded
 message.transfer.cancelled = The file transfer was canceled
-message.transfer.complete = The file transfer was complete ({0}))
+message.transfer.complete = The file transfer was complete ({0})
 message.transfer.progressbar.text.received = {0} received   @ {1}    {2}
 message.transfer.progressbar.text.sent = {0} sent   @ {1}    {2}
 message.transfer.rate = Transfer rate
