--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -468,7 +468,7 @@ message.click.to.open = Öffnen
 message.error.during.file.transfer = Während des Dateitransfers ist ein Fehler aufgetreten.
 message.transfer.refused = Der Dateitransfer wurde verweigert.
 message.transfer.cancelled = Der Dateitransfer wurde abgebrochen.
-message.transfer.complete = Der Dateitransfer war erfolgreich ({0}))
+message.transfer.complete = Der Dateitransfer war erfolgreich ({0})
 message.transfer.progressbar.text.received = {0} empfangen   @ {1}    {2}
 message.transfer.progressbar.text.sent = {0} gesendet   @ {1}    {2}
 message.file.exists.question = Die Datei existiert bereits. Überschreiben?
