SPARK-1275, no more connection loss
SPARK-1333, updated lithuanian sip

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12429 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/sip/src/java/org/jivesoftware/spark/plugin/phone/resource/sip_spark_i18n_lt.properties
+++ b/src/plugins/sip/src/java/org/jivesoftware/spark/plugin/phone/resource/sip_spark_i18n_lt.properties
@@ -109,8 +109,8 @@ book.fillFields = "Pra\u012fome u\u017epildyti visus laukus"
 book.warning = "D\u0117mesio"
 title.sip.codecs.title = Kodekai
 codecs.select = \u21E6 Pasirinkti
-codecs.unselect = I\u012fmesti \u21E8
-codecs.up = Vir\u012fun \u21E7
+codecs.unselect = I\u0161mesti \u21E8
+codecs.up = Vir\u0161un \u21E7
 codecs.down = \u017Demyn \u21E9
 codecs.audio.selected = Pasirinkti garso kodekai
 codecs.audio.avail	= Turimi garso kodekai
