SPARK-1335, spark now saves received broadcasts from user2user  also gets an error dialog when no user selected or no text provided
new locales:
message.broadcast.no.user.selected = Please select at least one recipient
message.broadcast.no.text = Please enter text to broadcast

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12444 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -615,6 +615,8 @@ message.autenticating = Authenticating
 message.away.idle = Away due to idle
 message.bookmark.temporary.room.error = You cannot bookmark temporary rooms
 message.broadcast.from = Broadcast from {0}
+message.broadcast.no.user.selected = Please select at least one recipient
+message.broadcast.no.text = Please enter text to broadcast
 message.broadcast.message.sent = The broadcast message has been sent
 message.broadcast.to = Enter message to broadcast to {0}
 message.broadcasted.to = The message has been broadcasted to the following users\:\n{0}
