--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -453,6 +453,8 @@ message.your.admin.granted = Sie sind jetzt Administrator.
 message.your.revoked.granted = Ihre Administratorenrechte wurden widerufen.
 message.send.a.broadcast = Rundnachricht senden
 message.broadcast.from = Rundnachricht von {0}
+message.broadcast.no.user.selected = Bitte mindestens einen Empfänger auswählen
+message.broadcast.no.text = Bitte Text für die Rundnachricht eingeben
 message.enter.message.to.broadcast = Eine Nachricht an alle Teilnehmer Ihrer Kontaktliste senden.
 message.broadcast.message.sent = Die Rundnachricht wurde versendet.
 message.broadcast.to = Eine Rundnachricht eingeben für {0}
