[Spark-LANG] polish updates
updated roar alittle

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12448 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_pl.properties
+++ b/src/resources/i18n/spark_i18n_pl.properties
@@ -281,6 +281,19 @@
 ##     Added key: 'refresh'
 ##     Added key: 'title.advanced.connection.sso.account'
 ##
+## 2.6.0 Road to version 2.6.1
+##
+##     Added key: 'checkbox.conference.tab.setting'
+##     Added key: 'message.broadcast.no.user.selected'
+##     Added key: 'message.broadcast.no.text'
+##     Added key: 'message.transfer.complete'
+##     Added key: 'message.transfer.progressbar.text.received'
+##     Added key: 'message.transfer.progressbar.text.sent'
+##     Added key: 'title.advanced.connection.sso'
+##     Added key: 'title.advanced.connection.sso.unable'
+##     Added key: 'title.advanced.connection.sso.noprincipal'
+##     Added key: 'title.login.no.account'
+##
 ##     Polish translation made by Martini26
 
 
@@ -422,6 +435,7 @@ checkbox.use.krb.dns = U\u017cyj DNS
 checkbox.use.specify.below = Okre\u015bl poni\u017csze opcje
 checkbox.use.pki.authentication = U\u017cyj autoryzacji PKI
 checkbox.transport.tab.setting = Pokazuj dost\u0119pne bramy w tabeli (wymaga restartu)
+checkbox.conference.tab.setting = Poka\u017c us\u0142ug\u0119 konferencji na karcie (wymaga restartu)
 
 delete.log.permanently = Usu\u0144 dziennik zdarze\u0144
 delete.permanently = Usun\u0105\u0107 trwale?
@@ -679,6 +693,8 @@ message.autenticating = Uwierzytelnianie
 message.away.idle = Zaraz wracam
 message.bookmark.temporary.room.error = Nie mo\u017cesz dodawa\u0107 tymczasowych pokoi do ulubionych
 message.broadcast.from = Wiadomo\u015b\u0107 grupowa od {0}
+message.broadcast.no.user.selected = Prosz\u0119 wybierz przynajmniej jednego odbiorc\u0119
+message.broadcast.no.text = Prosz\u0119 wprowad\u017a tekst dla wiadomo\u015bci grupowej enter text to broadcast
 message.broadcast.message.sent = Wiadomo\u015b\u0107 grupowa zosta\u0142a wys\u0142ana
 message.broadcast.to = Wpisz wiadomo\u015b\u0107 i wy\u015blij do {0}
 message.broadcasted.to = Wiadomo\u015b\u0107 zosta\u0142a wys\u0142ana do nast\u0119puj\u0105cych u\u017cytkownik\u00f3w\:\n{0}
@@ -841,6 +857,9 @@ message.supply.valid.timeout = Podaj poprawn\u0105 warto\u015b\u0107 czasu oczek
 message.timeout.error = Czas oczekiwania musi wynosi\u0107 minimum 5 sekund
 message.total.downloaded = Ilo\u015b\u0107 wszystkich pobra\u0144 plik\u00f3w
 message.transfer.cancelled = Przesy\u0142anie pliku zosta\u0142o anulowane
+message.transfer.complete = Transfer pliku zosta\u0142 uko\u0144czony ({0})
+message.transfer.progressbar.text.received = {0} otrzymano   @ {1}    {2}
+message.transfer.progressbar.text.sent = {0} wys\u0142ano   @ {1}    {2}
 message.transfer.rate = Pr\u0119dko\u015b\u0107 przesy\u0142ania 
 message.transfer.refused = Przesy\u0142anie pliku odrzucone
 message.transfer.waiting.on.user = Oczekiwanie na akceptacj\u0119 {0} przesy\u0142ania pliku
@@ -930,8 +949,11 @@ title.add.new.group = Dodaj now\u0105 grup\u0119
 title.add.search.service = Dodaj us\u0142ug\u0119 wyszukiwania
 title.add.to.roster = Dodaj do listy
 title.address = Adres
+title.advanced.connection.sso = U\u017cywam metody Using Single Sign-On (SSO)
 title.advanced.connection.usesso = U\u017cyj metody Single Sign-On (SSO) via GSSAPI
 title.advanced.connection.sso.account = To u\u017cyje konta logowania do pulpitu dla "{0}" aby zalogowa\u0107 do serwera.
+title.advanced.connection.sso.unable = Nie mo\u017cna po\u0142\u0105czy\u0107 u\u017cywaj\u0105c Single Sign-On. Sprawd\u017a ustawienia.
+title.advanced.connection.sso.noprincipal = Spark nie mo\u017ce znale\u017a\u0107 og\u00f3lnych ustawie\u0144 dla Single Sign-On. Pozwoli to zapobiec u\u017cywania SSO.
 title.alert = Alert
 title.appearance = Wygl\u0105d
 title.appearance.preferences = Dostosuj
@@ -1001,6 +1023,7 @@ title.last.activity = Ostatnia aktywno\u015b\u0107
 title.login = Login
 title.login.error = B\u0142\u0105d logowania
 title.login.settings = Ustawienia logowania
+title.login.no.account = Nie mo\u017cna okre\u015bli\u0107
 title.lookup.profile = Przegl\u0105daj profil
 title.msn.registration = Ustawienia konta MSN
 title.name = Nazwa
@@ -1105,3 +1128,9 @@ privacy.dialog.add.list = Wpisz nazw\u0119 listy
 privacy.dialog.rem.list = Czy na pewno chcesz usun\u0105\u0107 {0}?
 privacy.status.menu.entry = Listy prywatno\u015bci
 privacy.name.for.default.list = Domy\u015blna
+privacy.button.no.list.selected = Nie wybrano listy
+privacy.menuitem.deactivate.current.list = Deaktywuj obecn\u0105 list\u0119 {0}
+
+stun.border.label = Awaryjny serwer STUN
+stun.server.addr = Serwer STUN:
+stun.server.port = Port STUN:
