SPARK-1358 new in default.properties: FILE_TRANSFER_WARNING_SIZE = -1 FILE_TRANSFER_MAXIMUM_SIZE = -1
new locales:
message.file.transfer.file.too.big.error = The selected file is too big.\nThe maximum filezise is {0} the selected file has {1}

{0} = Maximum Size
{1] = Size of selected File

message.file.transfer.file.too.big.warning = The selected file is too big.\nProceed anyway?


git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12449 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -680,6 +680,8 @@ message.file.transfer.rejected = The file transfer was not accepted by {0}
 message.file.transfer.notification = File transfer notification
 message.file.transfer.short.message = is sending you a file called\:
 message.file.transfer.chat.window = File transfer request:
+message.file.transfer.file.too.big.error = The selected file is too big.\nThe maximum filezise is {0} the selected file has {1}
+message.file.transfer.file.too.big.warning = The selected file is too big.\nProceed anyway?
 message.find.conference.services = Find conference services
 message.forbidden.error = Received a forbidden error from the server
 message.gateway.username.error = Username needs to be supplied
