--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -473,6 +473,8 @@ message.transfer.cancelled = Der Dateitransfer wurde abgebrochen.
 message.transfer.complete = Der Dateitransfer war erfolgreich ({0})
 message.transfer.progressbar.text.received = {0} empfangen   @ {1}    {2}
 message.transfer.progressbar.text.sent = {0} gesendet   @ {1}    {2}
+message.file.transfer.file.too.big.error = Die ausgewählte Datei ist zu groß.\nEs dürfen maximal {0} versandt werden, die ausgewählte Datei hat {1}
+message.file.transfer.file.too.big.warning = Die ausgewählte Datei ist zu groß.\nDennoch fortfahren?
 message.file.exists.question = Die Datei existiert bereits. Überschreiben?
 message.transfer.waiting.on.user = {0} muss den Dateitransfer akzeptieren. Bitte warten...
 message.negotiation.file.transfer = Dateitransfer mit {0} wird initialisiert. Bitte warten...
