updated polish locale
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12456 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_pl.properties
+++ b/src/resources/i18n/spark_i18n_pl.properties
@@ -293,9 +293,10 @@
 ##     Added key: 'title.advanced.connection.sso.unable'
 ##     Added key: 'title.advanced.connection.sso.noprincipal'
 ##     Added key: 'title.login.no.account'
+##     Added key: 'message.file.transfer.file.too.big.error'
+##     Added key: 'message.file.transfer.file.too.big.warning'
 ##
 ##     Polish translation made by Martini26
-
 
 accept = Akceptuj
 active = Aktywny
@@ -758,6 +759,8 @@ message.file.transfer.rejected = Wysy\u0142anie pliku nie zosta\u0142o zaakcepto
 message.file.transfer.notification = Powiadomienie o wysy\u0142aniu pliku
 message.file.transfer.short.message = chce wys\u0142a\u0107 plik:
 message.file.transfer.chat.window = Czy chcesz odebra\u0107 plik:
+message.file.transfer.file.too.big.error = Wybrany plik jest za du\u017cy. Maksymalny rozmiar pliku to {0} wybrany plik ma {1}
+message.file.transfer.file.too.big.warning = Wybrany plik jest za du\u017cy. Kontynuowa\u0107?
 message.find.conference.services = Znajd\u017a us\u0142ugi konferencyjne
 message.forbidden.error = Otrzymano niedozwolony b\u0142\u0105d z serwera
 message.gateway.username.error = Pole 'u\u017cytkownik' nie mo\u017ce by\u0107 puste
