SPARK-984, in Preferences -> GroupChat -> Check "Names have random colors"
new entry in locales:
menuitem.add.groupchat.random.colors = Names have &random colors


---
new method in roar to prevent showing messages in groupchats

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12458 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -501,6 +501,7 @@ menuitem.add.groupchat.popname = Show &toast popup when someone says my name
 menuitem.add.groupchat.showjoinleavemessage = &Show join and leave messages
 menuitem.add.groupchat.showrolesinsteadofstatus = Show chat role icons instead of presence icons
 menuitem.add.groupchat.auto.accept.invite = &Automatically accept groupchat invites
+menuitem.add.groupchat.random.colors = Names have &random colors
 menuitem.always.on.top = Always on top
 menuitem.alert.when.online = Alert when user is available
 menuitem.ban = Ban
