--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -755,9 +755,10 @@ menuitem.user.guide = Benutzerhandbuch
 menuitem.add.groupchat.myname = Meinen &Namen hervorheben, wenn ihn jemand schreibt
 menuitem.add.groupchat.mytext = Meinen &Text hervorheben, wenn ich etwas schreibe
 menuitem.add.groupchat.popname = &Zeige ein Popup, wenn jemand meinen Namen schreibt
-menuitem.add.groupchat.showjoinleavemessage = Zeige an wenn jemand den Raum betritt oder verl‰sst 
-menuitem.add.groupchat.showrolesinsteadofstatus = Zeige Chatrecht-Icons anstelle von Statusicons
-menuitem.add.groupchat.auto.accept.invite = Konferenzeinladungen &automatisch aktzeptieren
+menuitem.add.groupchat.showjoinleavemessage = Zeige an wenn jemand den &Raum betritt oder verl‰sst 
+menuitem.add.groupchat.showrolesinsteadofstatus = Zeige &Chatrecht-Icons anstelle von Statusicons
+menuitem.add.groupchat.auto.accept.invite = &Konferenzeinladungen automatisch aktzeptieren
+menuitem.add.groupchat.random.colors = Zeige Namen mit zuf‰lligen &Farben
 menuitem.show.offline.users = Zeige Offline User
 menuitem.expand.all.groups = ÷ffne alle Gruppen
 menuitem.collapse.all.groups = Schlieﬂe alle Gruppen
