--- a/src/plugins/otr/src/resources/i18n/otrplugin_i18n.properties
+++ b/src/plugins/otr/src/resources/i18n/otrplugin_i18n.properties
@@ -9,7 +9,12 @@ current.priv.key = Current private key:
 renew.current.key = Generate a new key
 otr.close.session.on.window.close = Close OTR session when chat window is closed
 otr.close.session.on.contact.off = Close OTR session when contact went offline
+otr.key.not.verified.title = Key not verified
+otr.question.verify = Verify?
+otr.key.not.verified.text = Following key is not verified!
+otr.start.session.with = OTR encrypted Session with {0}
 
+otr.not.enabled = You recieved an OTR request. You should enable OTR in preferences.
 
 #Table Columns
 otr.table.jid = User's JID
