reaching otr beta status
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/branches/otrplugin@12462 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/otr/src/resources/i18n/otrplugin_i18n.properties
+++ b/src/plugins/otr/src/resources/i18n/otrplugin_i18n.properties
@@ -22,3 +22,9 @@ otr.table.public.key = Public key
 otr.key.verified  = Verified
 
 
+#OTR Panel in Chat
+otr.retry = Retry
+otr.try.to.connect.for.seconds = Trying to establish an OTR session. {0}s remaining...
+otr.failed.to.establish = Failed to establish OTR session. Timeout.
+otr.successfull = OTR successfully establish. Messages will be encrypted.
+otr.disconnected = OTR session closed. Messages are no longer encrypted.
