otr plugin  0.2 beta
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/branches/otrplugin@12463 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/otr/src/resources/i18n/otrplugin_i18n_de.properties
+++ b/src/plugins/otr/src/resources/i18n/otrplugin_i18n_de.properties
@@ -1,3 +1,30 @@
 
 # OTR language file
 
+otr.title = Off-the-Record Nachrichten Verschlüsselung
+otr.list.entry =  OTR Verschlüsselung
+otr.settings = OTR Einstellungen
+otr.enable = OTR Aktivieren
+current.priv.key = Aktueller privater Schlüssel:
+renew.current.key = Neuen Schlüssel generieren
+otr.close.session.on.window.close = OTR Sitzung schließen, wenn Chatfenster geschlossen wird
+otr.close.session.on.contact.off = OTR Sitzung schließen, wenn Kontakt sich abmeldet
+otr.key.not.verified.title = Schlüssel nicht beglaubigt
+otr.question.verify = Beglaubigen?
+otr.key.not.verified.text = Folgender Schlüssel ist nicht beglaubigt:
+otr.start.session.with = OTR Sitzung mit {0}
+
+otr.not.enabled = Sie haben eine OTR Anfrage empfagen. Sie sollten OTR in den Einstellungen aktivieren.
+
+#Table Columns
+otr.table.jid = Kontakt
+otr.table.public.key = Öffentlicher Schlüssel
+otr.key.verified  = Beglaubigt
+
+
+#OTR Panel in Chat
+otr.retry = Wiederholen
+otr.try.to.connect.for.seconds = Versuche eine OTR Sitzung aufzubauen. {0}s verbleibend...
+otr.failed.to.establish = Fehler beim erstellen der Sitzung. Zeit abgelaufen. 
+otr.successfull = Sitzung erfolgreich erstellt. Nachrichten werden jetzt verschlüsselt.
+otr.disconnected = Sitzung geschlossen. Nachrichten sind ab jetzt nicht mehr verschlüsselt!
