SPARK-1351, Plugins cannot be removed anymore, they can only be deactivated! on deactivation it will set a deactivated flag in your properties also added a "Deactivatet Plugins" tab, so you can reactivate them
new locale:
tab.deactivated.plugins = Deactivated plugins

changed locale:
from:
message.prompt.plugin.uninstall = Are you sure you want to uninstall {0}?
to:
message.prompt.plugin.uninstall = Are you sure you want to deactivate {0}?



fixed bug, where timer wouldn't stop running

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12466 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -731,7 +731,7 @@ message.password.private.room.error = Specify password for the private room
 message.passwords.no.match = Passwords do not match
 message.please.join.in.conference = Please join me in a conference
 message.plugins.not.available = Unable to contact the plugin repository
-message.prompt.plugin.uninstall = Are you sure you want to uninstall {0}?
+message.prompt.plugin.uninstall = Are you sure you want to deactivate {0}?
 message.received.file = You have received a file from {0}
 message.receiving.file = You are receiving a file from {0}
 message.reconnect.attempting = Attempting...
@@ -855,6 +855,7 @@ tab.contacts = Contacts
 tab.general = General
 tab.home = Home
 tab.installed.plugins = Installed plugins
+tab.deactivated.plugins = Deactivated plugins
 tab.personal = Personal
 tab.proxy = Proxy
 tab.sso = SSO
