--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -498,7 +498,7 @@ message.calling = Rufe {0}
 message.number.to.call = Bitte eine Nummer eingeben
 message.no.caller.id = Keine Ruf-ID verfügbar.
 message.no.history.found = Es sind keine weiteren Nachrichten verfügbar.
-message.prompt.plugin.uninstall = Dieses Plugin {0} wirklich deinstallieren?
+message.prompt.plugin.uninstall = Dieses Plugin {0} wirklich deaktivieren?
 message.restart.spark = Das Programm muss neugestartet werden damit die Änderungen aktiviert werden.
 message.loading.please.wait = Lade. Bitte warten...
 message.plugins.not.available = Konnte keine Verbindung mit der Pluginliste herstellen.
@@ -779,6 +779,7 @@ tab.proxy = Proxy
 tab.contacts = Kontakte
 tab.installed.plugins = Installierte Plugins
 tab.available.plugins = Verfügbare Plugins
+tab.deactivated.plugins = Deaktivierte Plugins
 tab.personal = Persönlich
 tab.business = Geschäftlich
 tab.home = Privat
