SPARK-1365 some fixes for otr plugin to prevent multiple messages and disconnect/reconnect problem. updated translation
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12477 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/otr/src/resources/i18n/otrplugin_i18n.properties
+++ b/src/plugins/otr/src/resources/i18n/otrplugin_i18n.properties
@@ -13,8 +13,8 @@ otr.key.not.verified.title = Key not verified
 otr.question.verify = Verify?
 otr.key.not.verified.text = Following key is not verified!
 otr.start.session.with = OTR encrypted Session with {0}
-
 otr.not.enabled = You recieved an OTR request. You should enable OTR in preferences.
+otr.chat.is.still.encrypted = This conversation is still encrypted. 
 
 #Table Columns
 otr.table.jid = User's JID
