--- a/src/plugins/otr/src/resources/i18n/otrplugin_i18n_de.properties
+++ b/src/plugins/otr/src/resources/i18n/otrplugin_i18n_de.properties
@@ -15,7 +15,7 @@ otr.key.not.verified.text = Folgender Schlüssel ist nicht beglaubigt:
 otr.start.session.with = OTR Sitzung mit {0}
 
 otr.not.enabled = Sie haben eine OTR Anfrage empfagen. Sie sollten OTR in den Einstellungen aktivieren.
-
+otr.chat.is.still.encrypted = OTR Sitzung aktiv. Nachrichten werden verschlüsselt. 
 #Table Columns
 otr.table.jid = Kontakt
 otr.table.public.key = Öffentlicher Schlüssel
